<resources>
    <string name="app_name">qiwi_front</string>
    <string name="customer">Покупатель</string>
    <string name="seller">Продавец</string>
    <string name="enter">Войти</string>
    <string name="not_registered_yet"><u>Ещё нет аккаунта?</u></string>
    <string name="search">Поиск</string>
    <string name="create_qr_code">Создать QR-код</string>
    <string name="qr_code_reading_error">Не удалось распознать QR код</string>
    <string name="enterGotCode">Введите полученный код</string>
    <string name="password">Пароль</string>
    <string name="phone_number">Номер телефона</string>
    <string name="register">Зарегестрироваться</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="enter_sum">Введите сумму</string>
    <string name="sum">Сумма</string>
    <string name="info">Информация</string>
    <string name="legal_name">Юридическое лицо</string>
    <string name="category">Категория</string>
    <string name="description">Описание</string>
    <string name="address">Адрес</string>
    <string name="profile">Профиль</string>
    <string name="qr_code">QR-код</string>
    <string name="checkDataOfPayment">Проверьте данные платежа</string>
    <string name="accept">Принять</string>
</resources>