<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:focusable="true"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.pages.registration.customer.CustomerRegistrationFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/customerRegistrToolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/orange"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/back"
        app:navigationIconTint="@color/white">

        <com.google.android.material.textview.MaterialTextView
            style="@style/ToolbarText"
            android:text="Регистрация" />
    </com.google.android.material.appbar.MaterialToolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customerRegistrToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_marginBottom="16dp"
                android:hint="@string/phone_number">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/TextInput"
                    android:id="@+id/phone"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_marginBottom="16dp"
                android:hint="@string/password">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/TextInput"
                    android:id="@+id/pass"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_marginBottom="16dp"
                android:hint="@string/name">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/TextInput"
                    android:id="@+id/name"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_marginBottom="16dp"
                android:hint="@string/surname">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/TextInput"
                    android:id="@+id/surname"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                style="@style/OrangeButton"
                android:layout_margin="10dp"
                android:text="@string/register"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/customerRegsitrButton"/>
        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/customerRegisterState"
        layout="@layout/states"/>
</androidx.constraintlayout.widget.ConstraintLayout>